--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -32,6 +32,6 @@ log4j.logger.com.github.pagehelper.mapper = TRACE
 log4j.logger.com.github.orderbyhelper.mapper = TRACE
 
 ### Console output...
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%5p [%t] - %m%n
+#log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+#log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+#log4j.appender.stdout.layout.ConversionPattern=%5p [%t] - %m%n
